--- a/top.css
+++ b/top.css
@@ -99,6 +99,14 @@ em {
   height: 70px;
   margin: 0;
   padding: 0;
-  border: 1px solid black;
+  border: 0;
+}
+
+.topbanner_div {
+  width: 1200px;
+  height: 70px;
+  margin: 0 auto;
+  padding: 0;
+  border: 1px solid red;
 }
 /*# sourceMappingURL=top.css.map */
