--- a/productIndex.css
+++ b/productIndex.css
@@ -95,7 +95,7 @@ em {
 .banner {
   width: 1200px;
   height: 500px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   border: 0;
   border: 1px solid red;
