--- a/productIndex.scss
+++ b/productIndex.scss
@@ -1,5 +1,5 @@
 @import "./main.scss";
 .banner{
-    @include div(1200px,500px,0,0,0);
+    @include div(1200px,500px,"auto",0,0);
     border:1px solid red;
 }
