--- a/top.css
+++ b/top.css
@@ -109,4 +109,12 @@ em {
   padding: 0;
   border: 1px solid blue;
 }
+
+.topbanner_div > li {
+  width: 490px;
+}
+
+.topbanner_div > li:last-child {
+  width: 220px;
+}
 /*# sourceMappingURL=top.css.map */
