--- a/top.css
+++ b/top.css
@@ -107,6 +107,6 @@ em {
   height: 70px;
   margin: 0 auto;
   padding: 0;
-  border: 1px solid red;
+  border: 1px solid blue;
 }
 /*# sourceMappingURL=top.css.map */
