--- a/top.scss
+++ b/top.scss
@@ -5,5 +5,5 @@
     @include div(100%,70px,0,0,0);
 }
 .topbanner_div{
-    @include div(1200px,70px,"auto",0,1px solid red);
+    @include div(1200px,70px,"auto",0,1px solid blue);
 }
