--- a/top.scss
+++ b/top.scss
@@ -5,15 +5,21 @@
     @include div(100%,70px,0,0,0);
 }
 .topbanner_div{
-    @include div(1200px,70px,"auto",0,1px solid blue);
-    &>li{
-        width: 490px;
-        &>img{
-            width: 100%;
-            object-fit: cover;
+    @include div(1200px,70px,"auto",0,0);
+    &ul{
+        @include div(100%,70px,"auto",0,1px solid blue);
+        float: left;
+        &>li{
+            width: 490px;
+            border: 1px solid black;
+            &>img{
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+        &>li:last-child{
+            width: 220px;
         }
     }
-    &>li:last-child{
-        width: 220px;
-    }
+
 }
