--- a/top.css
+++ b/top.css
@@ -110,7 +110,7 @@ em {
   border: 0;
 }
 
-.topbanner_divul {
+.topbanner_div > ul {
   width: 100%;
   height: 70px;
   margin: 0 auto;
@@ -119,18 +119,18 @@ em {
   float: left;
 }
 
-.topbanner_divul > li {
+.topbanner_div > ul > li {
   width: 490px;
   border: 1px solid black;
 }
 
-.topbanner_divul > li > img {
+.topbanner_div > ul > li > img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.topbanner_divul > li:last-child {
+.topbanner_div > ul > li:last-child {
   width: 220px;
 }
 /*# sourceMappingURL=top.css.map */
