--- a/top.css
+++ b/top.css
@@ -108,16 +108,23 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 1px solid blue;
-<<<<<<< HEAD
-=======
 }
 
 .topbanner_div > li {
   width: 490px;
 }
 
-.topbanner_div > li:last-child {
+.topbanner_div > li > li {
+  width: 490px;
+}
+
+.topbanner_div > li > li > img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.topbanner_div > li > li:last-child {
   width: 220px;
->>>>>>> 7b33a5f1945b01f68084df8d4154c4c7a61c4b54
 }
 /*# sourceMappingURL=top.css.map */
