--- a/top.scss
+++ b/top.scss
@@ -6,13 +6,17 @@
 }
 .topbanner_div{
     @include div(1200px,70px,"auto",0,1px solid blue);
-<<<<<<< HEAD
-=======
     &>li{
         width: 490px;
+    &>li{
+        width: 490px;
+        &>img{
+            width: 100%;
+            object-fit: cover;
+        }
     }
     &>li:last-child{
         width: 220px;
     }
->>>>>>> 7b33a5f1945b01f68084df8d4154c4c7a61c4b54
+}
 }
