--- a/top.scss
+++ b/top.scss
@@ -13,7 +13,7 @@
             width: 490px;
             border: 1px solid black;
             &>img{
-                width: 100%;
+                width: 490px;
                 object-fit: cover;
             }
         }
