--- a/top.scss
+++ b/top.scss
@@ -2,7 +2,7 @@
 @import "main.scss";
 
 .topbanner{
-    @include div(100%,70px,0,0,0);
+    @include div(100%,auto,0,0,0);
 }
 .topbanner_div{
     @include div(1200px,70px,"auto",0,0);
