--- a/bestproduct.css
+++ b/bestproduct.css
@@ -96,7 +96,7 @@ em {
 
 .best_div {
   width: 1200px;
-  height: auto;
+  height: 300px;
   margin: 0 auto;
   padding: 0;
   border: 1px solid black;
