--- a/top.scss
+++ b/top.scss
@@ -5,7 +5,7 @@
     @include div(100%,auto,0,0,0);
 }
 .topbanner_div{
-    @include div(1200px,70px,"auto",0,1px solid blue);
+    @include div(1200px,70px,"auto",0,0);
     &>li{
         width: 490px;
     &>li{
@@ -21,10 +21,9 @@
 }
     @include div(1200px,70px,"auto",0,0);
     &>ul{
-        @include div(100%,70px,"auto",0,1px solid blue);
+        @include div(100%,70px,"auto",0,0);
         &>li{
             width: 490px;
-            border: 1px solid black;
             float: left;
             &>img{
                 width: 100%;
