--- a/bestproduct.css
+++ b/bestproduct.css
@@ -96,9 +96,32 @@ em {
 
 .best_div {
   width: 1200px;
-  height: 300px;
+  height: auto;
   margin: 0 auto;
   padding: 0;
   border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.best_div > span {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 500;
+  font-size: 45px;
+  color: "";
+  letter-spacing: 0.3px;
+  height: 50px;
+  line-height: 50px;
 }
 /*# sourceMappingURL=bestproduct.css.map */
