--- a/top.scss
+++ b/top.scss
@@ -6,20 +6,6 @@
 }
 .topbanner_div{
     @include div(1200px,70px,"auto",0,0);
-    &>li{
-        width: 490px;
-    &>li{
-        width: 490px;
-        &>img{
-            width: 100%;
-            object-fit: cover;
-        }
-    }
-    &>li:last-child{
-        width: 220px;
-    }
-}
-    @include div(1200px,70px,"auto",0,0);
     &>ul{
         @include div(100%,70px,"auto",0,0);
         &>li{
@@ -32,6 +18,12 @@
         }
         &>li:last-child{
             width: 220px;
+            @include position("re");
+            &>.topbanner_closebtn{
+                @include position("ab");
+                right: 0;
+            }
         }
     }
+
 }
