--- a/bestproduct.css
+++ b/bestproduct.css
@@ -103,9 +103,9 @@ em {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -123,5 +123,13 @@ em {
   letter-spacing: 0.3px;
   height: 50px;
   line-height: 50px;
+}
+
+.best_div > label {
+  width: 270px;
+  height: 400px;
+  margin: 0;
+  padding: 0;
+  border: "";
 }
 /*# sourceMappingURL=bestproduct.css.map */
