--- a/top.css
+++ b/top.css
@@ -136,6 +136,11 @@ em {
 
 .topbanner_div > ul > li:last-child > .topbanner_closebtn {
   position: absolute;
+  width: 50px;
+  height: 70px;
+  margin: 0;
+  padding: 0;
+  border: 1px solid black;
   right: 0;
 }
 /*# sourceMappingURL=top.css.map */
