--- a/bestproduct.css
+++ b/bestproduct.css
@@ -100,19 +100,6 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 1px solid black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .best_div > span {
@@ -132,5 +119,6 @@ em {
   margin: 0;
   padding: 0;
   border: "";
+  display: inline-block;
 }
 /*# sourceMappingURL=bestproduct.css.map */
