--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -3,12 +3,12 @@
 
 .best_div{
     @include div(1200px,auto,auto,0,1px solid black);
-    @include flex(0,space-between,row,center,"","");
     &>span{
         @include font("noto",500,45,"");
         height: 50px; line-height: 50px; text-align: center;
     }
     &>label{
         @include div(270px,400px,0,0,"");
+        display: inline-block;
     }
 }
