--- a/bestproduct.css
+++ b/bestproduct.css
@@ -118,7 +118,31 @@ em {
   height: 400px;
   margin: 0;
   padding: 0;
-  border: "";
+  border: 1px solid black;
   display: inline-block;
+}
+
+.best_div > label > ul {
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+  padding: 0;
+  border: 1px solid black;
+}
+
+.best_div > label > ul > li {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border: "";
+}
+
+.best_div > label > ul > li:nth-of-type(1) {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border: "";
 }
 /*# sourceMappingURL=bestproduct.css.map */
