--- a/top.css
+++ b/top.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* font-family: 'Noto Sans KR', sans-serif; (font-weight 300,500)*/
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap");
 /* font-family: 'Nanum Gothic', sans-serif; */
@@ -142,7 +143,7 @@ em {
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 700;
   font-size: 30px;
-  color: black;
+  color: #333;
   letter-spacing: 0.3px;
   cursor: pointer;
   text-align: center;
@@ -160,5 +161,46 @@ em {
   padding: 0;
   border: 0;
   background-color: #ccc;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: "700";
+  font-size: 12px;
+  color: #333;
+  letter-spacing: 0.3px;
+  position: relative;
+}
+
+.topmenu > li {
+  width: 80px;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  border: 1px solid red;
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  float: left;
+  position: absolute;
+}
+
+.left_menu {
+  left: 0;
+  position: relative;
+}
+
+.left_menu > li:after {
+  position: absolute;
+  right: 0;
+}
+
+.left_menu > li:first-child::after {
+  content: "|";
+}
+
+.left_menu > li:last-child::after {
+  content: "▼";
+}
+
+.right_menu {
+  right: 0;
 }
 /*# sourceMappingURL=top.css.map */
