--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -8,7 +8,7 @@
         height: 50px; line-height: 50px; text-align: center;
     }
     &>label{
-        @include div(270px,400px,auto,0,1px solid black);
+        @include div("",400px,auto,0,1px solid black);
         display: inline-block;
         &>ul{
             @include div(100%,400px,auto,0,1px solid black);
