--- a/bestproduct.css
+++ b/bestproduct.css
@@ -111,10 +111,22 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .best_div > label {
-  width: "";
+  width: 270px;
   height: 400px;
   margin: 0 auto;
   padding: 0;
