--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -17,8 +17,11 @@
                 @include div(100%,auto,auto,0,"");
             }
             &>li:nth-of-type(1){
-                @include div(100%,auto,auto,0,"");
+                @include div(100%,270px,auto,0,"");
             }
+        }
+        &>ul:nth-of-type(1) > li:nth-of-type(1){
+            @include bg(2,"","./product/bestproduct1.png");
         }
     }
 }
