--- a/bestproduct.css
+++ b/bestproduct.css
@@ -165,4 +165,25 @@ em {
   background-repeat: no-repeat;
   background-size: 100%;
 }
+
+.best_div > label > ul:nth-of-type(2) > li:nth-of-type(1) {
+  background-image: url("./product/bestproduct2.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.best_div > label > ul:nth-of-type(3) > li:nth-of-type(1) {
+  background-image: url("./product/bestproduct3.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.best_div > label > ul:nth-of-type(4) > li:nth-of-type(1) {
+  background-image: url("./product/bestproduct4.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 /*# sourceMappingURL=bestproduct.css.map */
