--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -23,5 +23,14 @@
         &>ul:nth-of-type(1) > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct1.png");
         }
+        &>ul:nth-of-type(2) > li:nth-of-type(1){
+            @include bg(2,"","./product/bestproduct2.png");
+        }
+        &>ul:nth-of-type(3) > li:nth-of-type(1){
+            @include bg(2,"","./product/bestproduct3.png");
+        }
+        &>ul:nth-of-type(4) > li:nth-of-type(1){
+            @include bg(2,"","./product/bestproduct4.png");
+        }
     }
 }
