--- a/top.css
+++ b/top.css
@@ -95,6 +95,10 @@ em {
   font-style: normal;
 }
 
+.clear {
+  clear: both;
+}
+
 .topbanner {
   height: auto;
 }
@@ -155,7 +159,7 @@ em {
 }
 
 .top_menu {
-  width: 100%;
+  width: 1200px;
   height: 30px;
   margin: 0 auto;
   padding: 0;
@@ -174,7 +178,7 @@ em {
   height: 30px;
   margin: 0;
   padding: 0;
-  border: 1px solid red;
+  border: 0;
   text-align: center;
   line-height: 30px;
   cursor: pointer;
