--- a/top.scss
+++ b/top.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import "main.scss";
 
+.clear{clear: both;}
 .topbanner{
     height: auto;
 }
@@ -38,14 +39,14 @@
     height: auto;
 }
 .top_menu{
-    @include div(100%,30px,"auto",0,0);
+    @include div(1200px,30px,"auto",0,0);
     @include bg(0,#ccc,"");
     @include font("noto","700",12,#333);
     @include position("re");
 }
 .topmenu{
     &>li{
-        @include div(80px,30px,0,0,1px solid red);
+        @include div(80px,30px,0,0,0);
         text-align: center;
         line-height: 30px;
         cursor: pointer;
@@ -63,3 +64,4 @@
 .right_menu{
     float: right;
 }
+
