--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -19,6 +19,10 @@
             &>li:nth-of-type(1){
                 @include div(100%,270px,auto,0,"");
             }
+            &>li:nth-of-type(2){
+                @include font("noto",500,22,"");
+                height: 80px; 
+            }
         }
         &>ul:nth-of-type(1) > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct1.png");
