--- a/bestproduct.css
+++ b/bestproduct.css
@@ -162,34 +162,35 @@ em {
 .best_div > label > ul > li:nth-of-type(2) {
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 20px;
   color: "";
   letter-spacing: 0.3px;
   height: 80px;
+  vertical-align: middle;
 }
 
-.best_div > label > ul:nth-of-type(1) > li:nth-of-type(1) {
+.best_div > label > label:nth-of-type(1) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct1.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > ul:nth-of-type(2) > li:nth-of-type(1) {
+.best_div > label > label:nth-of-type(2) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct2.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > ul:nth-of-type(3) > li:nth-of-type(1) {
+.best_div > label > label:nth-of-type(3) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct3.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > ul:nth-of-type(4) > li:nth-of-type(1) {
+.best_div > label > label:nth-of-type(4) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct4.png");
   background-position: center top;
   background-repeat: no-repeat;
