--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -20,20 +20,20 @@
                 @include div(100%,270px,auto,0,"");
             }
             &>li:nth-of-type(2){
-                @include font("noto",500,22,"");
-                height: 80px; 
+                @include font("noto",500,20,"");
+                height: 80px; vertical-align: middle;
             }
         }
-        &>ul:nth-of-type(1) > li:nth-of-type(1){
+        &>label:nth-of-type(1) > ul > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct1.png");
         }
-        &>ul:nth-of-type(2) > li:nth-of-type(1){
+        &>label:nth-of-type(2) > ul > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct2.png");
         }
-        &>ul:nth-of-type(3) > li:nth-of-type(1){
+        &>label:nth-of-type(3) > ul  > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct3.png");
         }
-        &>ul:nth-of-type(4) > li:nth-of-type(1){
+        &>label:nth-of-type(4) > ul  > li:nth-of-type(1){
             @include bg(2,"","./product/bestproduct4.png");
         }
     }
