--- a/bestproduct.css
+++ b/bestproduct.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* font-family: 'Noto Sans KR', sans-serif; (font-weight 300,500)*/
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap");
 /* font-family: 'Nanum Gothic', sans-serif; */
@@ -169,28 +170,42 @@ em {
   vertical-align: middle;
 }
 
-.best_div > label > label:nth-of-type(1) > ul > li:nth-of-type(1) {
+.best_div > label > ul > li:nth-of-type(3) {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 500;
+  font-size: 25px;
+  color: "";
+  letter-spacing: 0.3px;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.best_div > label > ul > li:nth-of-type(3)::before {
+  content: "쿠팡특가";
+}
+
+.best_div > label:nth-of-type(1) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct1.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > label:nth-of-type(2) > ul > li:nth-of-type(1) {
+.best_div > label:nth-of-type(2) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct2.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > label:nth-of-type(3) > ul > li:nth-of-type(1) {
+.best_div > label:nth-of-type(3) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct3.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-.best_div > label > label:nth-of-type(4) > ul > li:nth-of-type(1) {
+.best_div > label:nth-of-type(4) > ul > li:nth-of-type(1) {
   background-image: url("./product/bestproduct4.png");
   background-position: center top;
   background-repeat: no-repeat;
