--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -23,18 +23,25 @@
                 @include font("noto",500,20,"");
                 height: 80px; vertical-align: middle;
             }
+            &>li:nth-of-type(3){
+                @include font("noto",500,25,"");
+                height: 50px; vertical-align: middle;
+            }
+            &>li:nth-of-type(3)::before{
+                content: "쿠팡특가";
+            }
         }
-        &>label:nth-of-type(1) > ul > li:nth-of-type(1){
-            @include bg(2,"","./product/bestproduct1.png");
-        }
-        &>label:nth-of-type(2) > ul > li:nth-of-type(1){
-            @include bg(2,"","./product/bestproduct2.png");
-        }
-        &>label:nth-of-type(3) > ul  > li:nth-of-type(1){
-            @include bg(2,"","./product/bestproduct3.png");
-        }
-        &>label:nth-of-type(4) > ul  > li:nth-of-type(1){
-            @include bg(2,"","./product/bestproduct4.png");
-        }
+    }
+    &>label:nth-of-type(1) > ul > li:nth-of-type(1){
+        @include bg(2,"","./product/bestproduct1.png");
+    }
+    &>label:nth-of-type(2) > ul > li:nth-of-type(1){
+        @include bg(2,"","./product/bestproduct2.png");
+    }
+    &>label:nth-of-type(3) > ul  > li:nth-of-type(1){
+        @include bg(2,"","./product/bestproduct3.png");
+    }
+    &>label:nth-of-type(4) > ul  > li:nth-of-type(1){
+        @include bg(2,"","./product/bestproduct4.png");
     }
 }
