--- a/bestproduct.css
+++ b/bestproduct.css
@@ -166,8 +166,20 @@ em {
   font-size: 20px;
   color: "";
   letter-spacing: 0.3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: "";
+      -ms-flex-pack: "";
+          justify-content: "";
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 80px;
-  vertical-align: middle;
 }
 
 .best_div > label > ul > li:nth-of-type(3) {
@@ -177,7 +189,6 @@ em {
   color: "";
   letter-spacing: 0.3px;
   height: 50px;
-  vertical-align: middle;
 }
 
 .best_div > label > ul > li:nth-of-type(3)::before {
