--- a/bestproduct.css
+++ b/bestproduct.css
@@ -150,6 +150,19 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: "";
+      -ms-flex-pack: "";
+          justify-content: "";
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .best_div > label > ul > li:nth-of-type(1) {
@@ -166,19 +179,6 @@ em {
   font-size: 20px;
   color: "";
   letter-spacing: 0.3px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: "";
-      -ms-flex-pack: "";
-          justify-content: "";
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   height: 80px;
 }
 
@@ -191,8 +191,9 @@ em {
   height: 50px;
 }
 
-.best_div > label > ul > li:nth-of-type(3)::before {
+.best_div > label > ul > li:nth-of-type(3):before {
   content: "쿠팡특가";
+  display: inline-block;
 }
 
 .best_div > label:nth-of-type(1) > ul > li:nth-of-type(1) {
