--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -15,21 +15,22 @@
             @include div(100%,400px,auto,0,"");
             &>li{
                 @include div(100%,auto,auto,0,1px solid black);
+                @include flex(0,"",row,center,"","");
             }
             &>li:nth-of-type(1){
                 @include div(100%,270px,auto,0,"");
             }
             &>li:nth-of-type(2){
                 @include font("noto",500,20,"");
-                @include flex(0,"",row,center,"","");
                 height: 80px;
             }
             &>li:nth-of-type(3){
                 @include font("noto",500,25,"");
                 height: 50px;
             }
-            &>li:nth-of-type(3)::before{
+            &>li:nth-of-type(3):before{
                 content: "쿠팡특가";
+                display: inline-block;
             }
         }
     }
