--- a/top.scss
+++ b/top.scss
@@ -65,3 +65,12 @@
     float: right;
 }
 
+.nav{
+    height: auto;
+}
+.nav_div{
+    height: 150px;
+    top: 10px;
+    border: 1px solid pink;
+}
+
