--- a/top.scss
+++ b/top.scss
@@ -69,8 +69,12 @@
     height: auto;
 }
 .nav_div{
-    height: 150px;
-    top: 10px;
+    @include div(1200px,150px,"auto",0,0);
+    margin-top: 10px;
     border: 1px solid pink;
+    &>.logo{
+        @include div(100%,30px,"auto",0,0);
+        background: url("./image/logo.png") no-repeat center center;
+    }
 }
 
