--- a/bestproduct.css
+++ b/bestproduct.css
@@ -111,7 +111,7 @@ em {
   height: auto;
   margin: 0 auto;
   padding: 0;
-  border: 1px solid black;
+  border: "";
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -124,6 +124,7 @@ em {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 10px;
 }
 
 .best_div > label {
@@ -193,7 +194,7 @@ em {
 }
 
 .best_div > label > ul > li:nth-of-type(3):before {
-  content: "쿠팡특가 ";
+  content: "쿠팡특가";
   color: red;
   padding-right: 5px;
 }
@@ -205,6 +206,12 @@ em {
   color: "";
   letter-spacing: 0.3px;
   height: 20px;
+}
+
+.best_div > label > ul > li:nth-of-type(4):before {
+  content: "최대 2.3% 적립";
+  color: blue;
+  padding-right: 5px;
 }
 
 .best_div > label:nth-of-type(1) > ul > li:nth-of-type(1) {
