--- a/top.css
+++ b/top.css
@@ -231,5 +231,6 @@ em {
   padding: 0;
   border: 0;
   background: url("./image/logo.png") no-repeat center center;
+  background-size: contain;
 }
 /*# sourceMappingURL=top.css.map */
