--- a/top.scss
+++ b/top.scss
@@ -75,6 +75,7 @@
     &>.logo{
         @include div(100%,30px,"auto",0,0);
         background: url("./image/logo.png") no-repeat center center;
+        background-size: contain;
     }
 }
 
