--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -10,12 +10,12 @@
     @include flex(0,space-around,row,center,"","");
     margin-top: 10px;
     &>label{
-        @include div(270px,400px,auto,0,""); 
+        @include div(270px,400px,auto,0,1px solid black); 
         text-align: center; margin-top: 10px;
         &>ul{
             @include div(100%,400px,auto,0,"");
             &>li{
-                @include div(100%,auto,auto,0,1px solid black);
+                @include div(100%,auto,auto,0,"");
                 @include flex(0,center,row,center,"","");
             }
             &>li:nth-of-type(1){
