--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -12,7 +12,7 @@
     margin-top: 10px;
     &>label{
         @include div(270px,400px,auto,0,1px solid black); 
-        text-align: center; margin-top: 10px;
+        text-align: center; margin-top: 10px; cursor: pointer;
         &>ul{
             @include div(100%,400px,auto,0,"");
             &>li{
