--- a/top.scss
+++ b/top.scss
@@ -37,10 +37,10 @@
 
 .top{
     height: auto;
+    @include bg(0,#ccc,"");
 }
 .top_menu{
     @include div(1200px,30px,"auto",0,0);
-    @include bg(0,#ccc,"");
     @include font("noto","700",12,#333);
     @include position("re");
 }
@@ -70,12 +70,25 @@
 }
 .nav_div{
     @include div(1200px,150px,"auto",0,0);
-    margin-top: 10px;
+    margin:10px 0 10px 0;
     border: 1px solid pink;
     &>.logo{
-        @include div(100%,30px,"auto",0,0);
+        @include div(100%,30px,0,0,0);
         background: url("./image/logo.png") no-repeat center center;
         background-size: contain;
     }
+    &>.search{
+        @include div(100%,40px,0,0,0);
+        &>input{
+            @include input(600,30,20,1px solid rgb(35, 129, 236),0);
+            @include font("noto","700",12,#333);
+        }
+        &>button{
+            @include input(80,30,20,1px solid rgb(35, 129, 236),0);
+            @include bg(0,rgb(35, 129, 236),"");
+            @include font("noto","700",12,#fff);
+        }
+    }
 }
+
 
