--- a/top.css
+++ b/top.css
@@ -220,7 +220,7 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 0;
-  margin: 10px 0 10px 0;
+  margin-top: 10px;
   border: 1px solid pink;
 }
 
@@ -240,6 +240,7 @@ em {
   margin: 0;
   padding: 0;
   border: 0;
+  margin-top: 10px;
 }
 
 .nav_div > .search > span > input {
@@ -262,7 +263,7 @@ em {
 .nav_div > .search > span > button {
   width: 80px;
   height: 30px;
-  text-indent: 20px;
+  text-indent: 0px;
   border: 1px solid #2381ec;
   letter-spacing: 0.3px;
   -webkit-box-sizing: border-box;
