--- a/bestproduct.css
+++ b/bestproduct.css
@@ -195,6 +195,30 @@ em {
   line-height: 45px;
 }
 
+.best_div > label > ul > li:nth-of-type(1):before {
+  content: "쿠팡특가";
+  color: red;
+  padding-right: 5px;
+}
+
+.best_div > label > ul > li:nth-of-type(2):before {
+  content: "31%";
+  color: red;
+  padding-right: 5px;
+}
+
+.best_div > label > ul > li:nth-of-type(3):before {
+  content: "쿠팡특가";
+  color: red;
+  padding-right: 5px;
+}
+
+.best_div > label > ul > li:nth-of-type(4):before {
+  content: "15%";
+  color: red;
+  padding-right: 5px;
+}
+
 .best_div > label > ul > li:nth-of-type(3):before {
   content: "쿠팡특가";
   color: red;
