--- a/bestproduct.scss
+++ b/bestproduct.scss
@@ -30,6 +30,28 @@
                 @include font("nanum",700,25,"");
                 height: 50px; line-height: 45px;
             }
+            @for $liea from 1 to 5{
+                @if($liea==1){
+                    &>li:nth-of-type(#{$liea}):before{
+                        content: "쿠팡특가"; color: red; padding-right: 5px;
+                    }
+                }
+                @else if($liea==3){
+                    &>li:nth-of-type(#{$liea}):before{
+                        content: "쿠팡특가"; color: red; padding-right: 5px;
+                    }
+                }
+                @else if($liea==2){
+                    &>li:nth-of-type(#{$liea}):before{
+                        content: "31%"; color: red; padding-right: 5px;
+                    }
+                }
+                @else{
+                    &>li:nth-of-type(#{$liea}):before{
+                        content: "15%"; color: red; padding-right: 5px;
+                    }
+                }
+            }
             &>li:nth-of-type(3):before{
                 content: "쿠팡특가"; color: red; padding-right: 5px;
             }
@@ -42,16 +64,9 @@
             }
         }
     }
-    &>label:nth-of-type(1) > ul > li:nth-of-type(1){
-        @include bg(2,"","./product/bestproduct1.png");
-    }
-    &>label:nth-of-type(2) > ul > li:nth-of-type(1){
-        @include bg(2,"","./product/bestproduct2.png");
-    }
-    &>label:nth-of-type(3) > ul  > li:nth-of-type(1){
-        @include bg(2,"","./product/bestproduct3.png");
-    }
-    &>label:nth-of-type(4) > ul  > li:nth-of-type(1){
-        @include bg(2,"","./product/bestproduct4.png");
+    @for $svg from 1 to 5{
+        &>label:nth-of-type(#{$svg}) > ul > li:nth-of-type(1){
+            @include bg(2,"","./product/bestproduct"+$svg+".png");
+        }
     }
 }
