--- a/top.css
+++ b/top.css
@@ -258,13 +258,15 @@ em {
   font-size: 12px;
   color: #333;
   letter-spacing: 0.3px;
+  margin: 0;
+  padding: 0;
 }
 
 .nav_div > .search > span > button {
   width: 80px;
   height: 30px;
   text-indent: 0px;
-  border: 1px solid #2381ec;
+  border: 2px solid #2381ec;
   letter-spacing: 0.3px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -276,5 +278,7 @@ em {
   font-size: 12px;
   color: #fff;
   letter-spacing: 0.3px;
+  margin: 0;
+  padding: 0;
 }
 /*# sourceMappingURL=top.css.map */
