--- a/bestproduct.css
+++ b/bestproduct.css
@@ -238,25 +238,25 @@ em {
   background-size: 100%;
 }
 
-.best_div > label:nth-of-type(1) > li:nth-of-type(3):before {
+.best_div > label:nth-of-type(1) > ul > li:nth-of-type(3):before {
   content: "쿠팡특가";
   color: red;
   padding-right: 5px;
 }
 
-.best_div > label:nth-of-type(2) > li:nth-of-type(3):before {
+.best_div > label:nth-of-type(2) > ul > li:nth-of-type(3):before {
   content: "31%";
   color: red;
   padding-right: 5px;
 }
 
-.best_div > label:nth-of-type(3) > li:nth-of-type(3):before {
+.best_div > label:nth-of-type(3) > ul > li:nth-of-type(3):before {
   content: "쿠팡특가";
   color: red;
   padding-right: 5px;
 }
 
-.best_div > label:nth-of-type(4) > li:nth-of-type(3):before {
+.best_div > label:nth-of-type(4) > ul > li:nth-of-type(3):before {
   content: "15%";
   color: red;
   padding-right: 5px;
