--- a/top.scss
+++ b/top.scss
@@ -97,6 +97,20 @@
             }
         }
     }
+    &>.main_menu{
+        @include div(100%,40px,0,0,0);
+        @include font("noto","700",20,#fff);
+        &>ul{
+            height: auto;
+            &>li{
+                width: 120px;
+                height: 40px;
+                @include bg(0,rgb(35, 129, 236),"");
+                text-align: center;
+                line-height: 40px;
+            }
+        }
+    }
 }
 
 
