--- a/top.css
+++ b/top.css
@@ -309,5 +309,6 @@ em {
   background-color: #2381ec;
   text-align: center;
   line-height: 40px;
+  float: left;
 }
 /*# sourceMappingURL=top.css.map */
