--- a/top.scss
+++ b/top.scss
@@ -108,6 +108,7 @@
                 @include bg(0,rgb(35, 129, 236),"");
                 text-align: center;
                 line-height: 40px;
+                float: left;
             }
         }
     }
