--- a/top.scss
+++ b/top.scss
@@ -108,6 +108,7 @@
                 text-align: center;
                 line-height: 40px;
                 float: left;
+                cursor: pointer;
             }
         }
     }
