--- a/bestproduct.css
+++ b/bestproduct.css
@@ -262,4 +262,29 @@ em {
   color: red;
   padding-right: 5px;
 }
+
+.footer {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border: "";
+  background-color: #000;
+}
+
+.footer_div {
+  width: 1200px;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border: "";
+}
+
+.footer_div > ol {
+  width: 1200px;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border: "";
+}
 /*# sourceMappingURL=bestproduct.css.map */
